2011-04-03  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/cacheinfo.c (intel_02_known): Fix typo in table.
	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Likewise.

2011-04-02  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/bits/time.h (CLOCK_BOOTTIME): Define.

	* include/features.h: Mention __USE_XOPEN2K8 in comment.

2011-03-26  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #12518]
	* sysdeps/x86_64/Versions: Add memcpy to GLIBC_2.14.
	* sysdeps/x86_64/memcpy.S: Provide GLIBC_2_14 memcpy.
	* sysdeps/x86_64/memmove.c: New file.
	* sysdeps/x86_64/multiarch/memcpy.S: Include <shlib-compat.h>.
	(memcpy): Renamed to ...
	(__new_memcpy): This.
	(memcpy): Provide GLIBC_2_14 memcpy.
	* sysdeps/x86_64/multiarch/memmove.c: Include <shlib-compat.h>.
	(memcpy): Provide GLIBC_2_2_5 memcpy.

2011-04-01  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12631]
	* wcsmbs/wchar.h: Make wcpcpy and wcpncpy visible for __USE_XOPEN2K8.

2011-03-30  Andreas Schwab  <schwab@redhat.com>

	* misc/syncfs.c: New file.
	* misc/Makefile (routines): Add syncfs.
	* posix/unistd.h: Declare syncfs.
	* sysdeps/unix/syscalls.list: Add syncfs.

2011-04-01  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/Versions: Rename open_by_handle to
	open_by_handle_at.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.

2011-04-01  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Define O_PATH.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.